--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ managed = true
 dev-dependencies = [
     "pytest>=8.0.2",
     "setuptools>=69.1.1",
+    "ipython>=8.22.1",
 ]
 
 [tool.hatch.metadata]
